release 2024R3